tests/tldk/error/error-tldk-test-tbd1.pkt
// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 40305
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+0 < . 1:1(0) ack 1 win 0
+0  accept(3, ..., ...) = 4
+0 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:106(105) ack 1 win 8

+0 write(4, ..., 1849) =  1849